css styling starsign
styled starsign section

--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
 
         <section class="horoscope-container">
             <h2>Select your starsign</h2>
-            <div> Aries (March 21 – April 19)</div>
-            <div> Taurus (April 20 – May 20)</div>
-            <div> Gemini (May 21 – June 20)</div>
-            <div> Cancer (June 21 – July 22)</div>
-            <div> Leo (July 23 – August 22)</div>
-            <div> Virgo (August 23 – September 22)</div>
-            <div> Libra (September 23 – October 22)</div>
-            <div> Scorpio (October 23 – November 21)</div>
-            <div> Sagittarius (November 22 – December 21)</div>
-            <div> Capricorn (December 22 – January 19)</div>
-            <div> Aquarius (January 20 – February 18)</div>
-            <div> Aquarius (January 20 – February 18)</div>
+            <div class="starsign-container">
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_aries.png" alt=""> Aries <br>(March 21 – April 19)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_gemini.png" alt=""> Gemini <br>(May 21 – June 20)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_cancer.png" alt=""> Cancer <br>(June 21 – July 22)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_taurus.png" alt=""> Taurus <br>(April 20 – May 20)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_leo.png" alt=""> Leo <br>(July 23 – August 22)</div>
+            <div class="starsign"> <img style = "width: 100px; height:100px" src="/img/starsign_virgo.png" alt="">Virgo <br>(August 23 – September 22)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_libra.png" alt=""> Libra <br>(September 23 – October 22)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_scorpio.png" alt=""> Scorpio <br>(October 23 – November 21)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_sagi.png" alt=""> Sagittarius<br> (November 22 – December 21)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_capricorn.png" alt=""> Capricorn <br>(December 22 – January 19)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_aquarius.png" alt=""> Aquarius<br> (January 20 – February 18)</div>
+            <div class="starsign"><img style = "width: 100px; height:100px" src="/img/starsign_pisces.png" alt=""> Pisces <br>(February 19 – March 20)</div>
+        </div>
         </section>
     
  <script src="script.js"></script>   
