Selection box styling
wrote CSS for horoscope selections

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </header>
 
        <section class="horoscope-container">
-           <h2> Select starsign</h2>
-           <form action="horoscope.html" id="form" method="post">
+           <h2> Get your horoscope</h2>
+           <div class="select-container">
         <select name="starsign" id="starsign" onchange="Update()">
             <option value="Aries">Aries</option>
             <option value="Gemini">Gemini</option>
@@ -49,7 +49,7 @@
             <option value="Yesterday">Yesterday</option>
             <option value="Tomorrow">Tomorrow</option>
         </select>
-    </form>
+    </div>
 </section>
     
     
