--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
             <option value="Tomorrow">Tomorrow</option>
         </select>
     </div>
+    <div id="my-horoscope"></div>
 </section>
+
+
     
     
  <script src="script.js"></script>   
