Add tarot card page and attach nav links
Created tarot folder and added HTML CSS and JavaScript to generate Tarot cards on click of Draw button. Added nav links to take to separate page.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Tarot</li>
-            <li>Compatability</li>
+            <li class="nav-links"> <a href="index.html">Home</a></li>
+            <li class="nav-links"><a href="/tarot/tarot.html">Tarot</a></li>
+            <li class="nav-links"><a href="">Compatability</a></li>
+            
         </ul>
     </nav>
 
