Fixed image issue
Added image folder and script files

--- a/tarot/tarot.html
+++ b/tarot/tarot.html
@@ -17,6 +17,6 @@
         </div>
         <button id="draw">Draw a card</button>
     </section> 
-    <script src="/script.js"></script>
+    <script src="/tarot/tarot.js"></script>
 </body>
 </html>
