--- a/tarot/tarot.html
+++ b/tarot/tarot.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="/tarot/tarot.css" class="">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li class="nav-links"> <a href="/index.html">Home</a></li>
+            <li class="nav-links"><a href="/tarot/tarot.html">Tarot</a></li>
+            
+        </ul>
+    </nav>
+
     <section id="container">
         <h1>Tarot Card Reading</h1>
         <p> Focus on yourself and set your intentions - when you are ready click draw a card,<br>
